--- a/TcpUdpTool/View/UdpMulticastView.xaml
+++ b/TcpUdpTool/View/UdpMulticastView.xaml
@@ -5,6 +5,7 @@
              xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TcpUdpTool.View"
+             xmlns:system="clr-namespace:System;assembly=mscorlib"
              xmlns:viewmodel="clr-namespace:TcpUdpTool.ViewModel"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
@@ -66,7 +67,8 @@
                          Height="21"
                          VerticalAlignment="Center"
                          VerticalContentAlignment="Center"
-                         Text="{Binding MulticastGroup, UpdateSourceTrigger=PropertyChanged}"/>
+                         Validation.ErrorTemplate="{x:Null}"
+                         Text="{Binding MulticastGroup, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                 
                 <Label Grid.Row="0"
                        Grid.Column="2"
@@ -79,7 +81,8 @@
                          Height="21"
                          VerticalAlignment="Center"
                          VerticalContentAlignment="Center"
-                         Text="{Binding MulticastPort, UpdateSourceTrigger=PropertyChanged}" />
+                         Validation.ErrorTemplate="{x:Null}"
+                         Text="{Binding MulticastPort, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, TargetNullValue={x:Static system:String.Empty}}" />
 
 
                 <Label Grid.Column="0"
@@ -99,7 +102,6 @@
                           Margin="0 0 10 0"
                           ItemsSource="{Binding Source={StaticResource SortedListenInterfaces}}"
                           SelectedItem="{Binding SelectedListenInterface}"/>
-
 
                 <Button Grid.Row="1"
                         Grid.Column="3"
@@ -127,7 +129,6 @@
         <local:HistoryView Grid.Column="0"
                            Grid.Row="1"
                            Margin="10 0 10 10" />
-
 
 
         <GroupBox Header="Send"
@@ -166,7 +167,8 @@
                          Margin="0 10 0 10"
                          VerticalAlignment="Center"
                          VerticalContentAlignment="Center"
-                         Text="{Binding SendMulticastGroup, UpdateSourceTrigger=PropertyChanged}" />
+                         Validation.ErrorTemplate="{x:Null}"
+                         Text="{Binding SendMulticastGroup, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
                 <Label Grid.Column="2"
                        Grid.Row="0"
@@ -181,7 +183,8 @@
                          VerticalAlignment="Center"
                          VerticalContentAlignment="Center"
                          Margin="10" 
-                         Text="{Binding SendMulticastPort, UpdateSourceTrigger=PropertyChanged}"/>
+                         Validation.ErrorTemplate="{x:Null}"
+                         Text="{Binding SendMulticastPort, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
 
                 <Label Grid.Column="0"
                        Grid.Row="1"
