--- a/TcpUdpTool/View/SettingsView.xaml
+++ b/TcpUdpTool/View/SettingsView.xaml
@@ -89,30 +89,50 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
 
                 <Label Grid.Column="0"
                        Grid.Row="0"
                        Content="Show:" />
-                
-                <TextBox Grid.Column="1"
-                         Grid.Row="0"
+
+                <StackPanel Grid.Column="1"
+                            Grid.Row="0"
+                            Orientation="Horizontal">
+                    <TextBox 
                          Width="40"
                          Height="20"
                          VerticalContentAlignment="Center"
+                         HorizontalAlignment="Left"
                          Text="{Binding HistoryEntries, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
 
-                <Label Grid.Column="2"
-                       Grid.Row="0"
-                       Content="entries" />
-
+                    <Label Content="entries" />
+                </StackPanel>
+                       
                 <Label Grid.Column="0"
                        Grid.Row="1"
+                       Content="Scroll to End:" />
+
+                <StackPanel Grid.Column="1"
+                            Grid.Row="1"
+                            Orientation="Horizontal"
+                            VerticalAlignment="Center"
+                            Margin="0 2 0 0">
+
+                    <RadioButton Content="Yes" 
+                                 IsChecked="{Binding ScrollToEndEnabled, Mode=TwoWay}"/>
+                    <RadioButton Content="No"
+                                 Margin="10 0 0 0"
+                                 IsChecked="{Binding ScrollToEndDisabled, Mode=OneWay}"/>
+                </StackPanel>
+
+                <Label Grid.Column="0"
+                       Grid.Row="2"
                        Content="Info:"
                        Margin="0"/>
 
                 <StackPanel Grid.Column="1"
-                            Grid.Row="1"
+                            Grid.Row="2"
                             Grid.ColumnSpan="2"
                             Orientation="Vertical"
                             VerticalAlignment="Center"
