--- a/TcpUdpTool/View/UdpMulticastView.xaml
+++ b/TcpUdpTool/View/UdpMulticastView.xaml
@@ -197,14 +197,30 @@
 
                 <ComboBox Grid.Column="1"
                           Grid.Row="1"
-                          Grid.ColumnSpan="3"
                           Height="21"
                           Text="Default"
-                          Margin="0 0 10 8"
+                          Margin="0"
                           IsEditable="True"
                           IsReadOnly="True"
                           ItemsSource="{Binding Source={StaticResource SortedSendInterfaces}}"
                           SelectedItem="{Binding SelectedSendInterface}" />
+
+                <Label Grid.Column="2"
+                       Grid.Row="1"
+                       Height="21"
+                       Content="TTL:"
+                       Margin="10 0 0 0"
+                       Padding="0"
+                       VerticalAlignment="Center"/>
+
+                <TextBox Grid.Column="3"
+                         Grid.Row="1"
+                         Height="21"
+                         VerticalAlignment="Center"
+                         VerticalContentAlignment="Center"
+                         Margin="10 0 10 0"
+                         Validation.ErrorTemplate="{x:Null}"
+                         Text="{Binding SendTTL, UpdateSourceTrigger=PropertyChanged}"/>
 
                 <Label Grid.Column="0"
                        Grid.Row="2"
